overflow fixed and scrolling audio player

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -66,6 +66,7 @@
 
 .profileModule {
   position: relative;
+  object-position: center;
   object-fit: contain;
   background-color: var(--artape-primary-color);
   width: 350px;
